# jl8n.dev

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: build.yml  deploy.yml
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
server/: .env.secret  .gitignore  Cargo.toml  Dockerfile  README.md  albumArt.go  currentSong.go  docker-compose.yml  foo.go  go.mod  go.sum  main.go  musicGetters.go  nowPlaying.go  scrobbles.go
server/db/: README.md  docker-compose.yml
server/src/: .env  .env.secret  albumArt.go  go.mod  go.sum  main.go  main.rs  nowPlaying.go
server/src/structs/: structs.go
server/structs/: structs.go
server/ws/: go.mod  main.go
sever_rust/: .env.secret
sever_rust/src/: main.rs
web/: .env.production  Dockerfile  package.json  pnpm-lock.yaml  svelte.config.js
web/src/: app.html
web/src/components/: LeftDrawer.svelte  Tab.svelte  TabContainer.svelte
web/src/lib/images/: pfp.webp.secret
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte  Footer.svelte  Test.svelte  __layout.svelte
web/src/routes/listens/: +page.svelte
web/src/routes/projects/: +page.svelte
