[package]
name = "casa-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.17"
dotenv = "0.15.0"
env = "0.0.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = {version = "1.28.0", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.4.0", features = ["cors"] }

